--- a/sha-arp/css/style.css
+++ b/sha-arp/css/style.css
@@ -6,6 +6,11 @@
  * Version: 1.0
  * URL: http://blacktie.co
  */
+
+/* Custom by Harsh*/
+.transparent{
+    background:rgba(255,255,255,0.5);
+}
  
 .font-thin {
 	font-family: "Titillium Web", sans-serif;
@@ -339,7 +344,7 @@ body {
 	
 	.content-row h2 {
 		font-size: 28px;
-		padding-bottom: 40px;
+		padding-bottom: 0px;
 	}
 	
 	.content-row h4, .content-row h4 a  {
